--- a/html/ethereology.html
+++ b/html/ethereology.html
@@ -76,11 +76,11 @@ article {
   
 <nav>
   <ul>
-	<li><a href="index.html">Welcome</a></li>
-	<li><a href="html/ethereology.html">Index</a></li>
-	<li><a href="html/explorer.html">Explorer</a></li>
+	<li><a href="welcome.html">Welcome</a></li>
+	<li><a href="ethereology.html">Index</a></li>
+	<li><a href="explorer.html">Explorer</a></li>
 	<li><a href="off-whitepaper/off-whitepaper.pdf">Off-Whitepaper</a></li>
-	<li><a href="html/contribute.html">Contribute</a></li>
+	<li><a href="contribute.html">Contribute</a></li>
   </ul>
 </nav>
 
