--- a/html/contribute.html
+++ b/html/contribute.html
@@ -71,29 +71,28 @@ article {
 <div class="container">
 
 <header>
-   <h1>Ethereology</h1>
+   <h1></h1>
 </header>
   
 <nav>
   <ul>
-	<li><a href="index.html">Welcome</a></li>
-	<li><a href="html/ethereology.html">Index</a></li>
-	<li><a href="html/explorer.html">Explorer</a></li>
+	<li><a href="welcome.html">Welcome</a></li>
+	<li><a href="ethereology.html">Index</a></li>
+	<li><a href="explorer.html">Explorer</a></li>
 	<li><a href="off-whitepaper/off-whitepaper.pdf">Off-Whitepaper</a></li>
-	<li><a href="html/contribute.html">Contribute</a></li>
+	<li><a href="contribute.html">Contribute</a></li>
   </ul>
 </nav>
 
 <article>
-	<h1>Attributes</h1>
-		<p>Attributes are matters-of-fact with regard to the state (i.e. the history) of the Ethereum Blockchain.</p>
-	<h1>Mechanisms</h1>
-		<p>Mechanisms are parts of the blockchain whose operation results on the commission of Attributes to the state.</p>
-	<h1>Nodenets</h1>
-		<p>Persons are the operators of the protocol which bring about the functioning of Mechanisms in line with on-chain Attributes.</p>
+	<h1>Contribute</h1>
+		<p>The entire website and its associated code are stored and maintained <a href="https://www.github.com/chronaeon/ethereology.git">here.</a></p> Pull requests, issues, and/or other contributions are welcome.</p>
+
+	<h1>Feedback</h1>
+		<p>Got feedback? Help us out and share your wisdom: feedback@ethereology.com</p>
 </article>
 
-<footer>Ethereology is an experiential resource for learning about Ethereum.</footer>
+<footer>Ethereology is a conceptual and experimental resource for learning about Ethereum.</footer>
 
 </div>
 
