modified:   contribute.html

--- a/contribute.html
+++ b/contribute.html
@@ -92,7 +92,8 @@ article {
 		<p>Got feedback? Help us out and share your wisdom: feedback@ethereology.com</p>
 </article>
 
-<footer>Ethereology is a conceptual and experimental resource for learning about Ethereum.</footer>
+<footer>Ethereology is a conceptual and experimental resource for learning about Ethereum.<br>Donate:<br>BTC: 1CwdxDLNoXaek1ku9MsoQrwC4926Y2dqob<br> ETH:
+</footer>
 
 </div>
 
